# CadExchangerAssignment

./: CMakeLists.txt  README.md
app/: App.cpp  CMakeLists.txt  Util.hpp
curve/: CMakeLists.txt
curve/include/curve/: Circle.hpp  Curve.hpp  Ellipse.hpp  Helix.hpp  Vector.hpp
curve/src/: Circle.cpp  Ellipse.cpp  Helix.cpp  Vector.cpp
curve/test/: TestCircle.cpp  TestEllipse.cpp  TestHelix.cpp  TestMain.cpp  TestUtil.hpp  TestVector.cpp
